# aoe2-cba-survival

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  m2_diff.txt  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new_wave_idea.md
.github/workflows/: ci.yml
config/: README.md  balance.yaml  waves.yaml
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md
mod/: README.md
scripts/: README.md  build.py  build_survival.py  clean.py  deploy.py
src/: README.md
src/cba_survival/: __init__.py  builder.py  config.py  datasets.py  layout.py  placement.py  players.py  survival.py  triggers.py
tests/: README.md  conftest.py  test_build.py  test_config.py  test_generator.py  test_no_fancy_dashes.py  test_roundtrip.py  test_survival.py  test_triggers.py  test_triggers_economy.py
